Add docs for how to break out of Mill sandbox folder (#3518)
Fixes https://github.com/com-lihaoyi/mill/issues/3510

I decided to try and standardize on a `MILL_WORKSPACE_ROOT` environment
variable that is present in both build files and tests, to try and
provide a seamless experience to our users.

`mill.api.WorkspaceRoot.workspaceRoot` and `T.workspace` are still there
but perhaps we can get rid of them in 0.13.0 in favor of using
`MILL_WORKSPACE_ROOT` everywhere. After all, accessing the workspace
root should be inconvenient to discourage people from doing it
unnecessarily, so providing short concise helper methods to do so may
even be a net negative